data/derived/comb/progs/unify/prog6792.ml.out
Characters 218-248:
  | Average (x3,x4)      -> (eval(x3,x,y) +. eval(x4,x,y))/2
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
